# Computer-Graphics-From-Scratch

./: .gitignore
Chapter2/: CMakeLists.txt  main.cpp
Chapter2/include/graphics/: canvas.hpp  raytracing.hpp
Chapter2/lib/: CMakeLists.txt  canvas.cpp  raytracing.cpp
